--- a/frontend-vite/index.html
+++ b/frontend-vite/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>Vue.js Vite Example</title>
-    <meta content="initial-scale=1.0, width=device-width" name="viewport" />
-    <link href="/favicon-196.png" rel="icon" />
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="/src/main.js" type="module"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
